add favicon and fix links to files

--- a/styles/components/_link-message.scss
+++ b/styles/components/_link-message.scss
@@ -12,17 +12,17 @@
 }
 
 .header__link_git {
-   background-image: url(/assets/svg/github.svg);
+   background-image: url(../assets/svg/github.svg);
 }
 
 .header__link_codewars {
-   background-image: url(/assets/svg/codewars.svg);
+   background-image: url(../assets/svg/codewars.svg);
 }
 
 .header__link_telegram {
-   background-image: url(/assets/svg/telegram.svg);
+   background-image: url(../assets/svg/telegram.svg);
 }
 
 .header__link_mail {
-   background-image: url(/assets/svg/email.svg);
+   background-image: url(../assets/svg/email.svg);
 }
