--- a/styles/help/_base.scss
+++ b/styles/help/_base.scss
@@ -2,13 +2,13 @@
    font-family: 'Poppins';
    font-weight: normal;
    font-style: normal;
-   src: url(/assets/fonts/Poppins-Medium.ttf);
+   src: url(../assets/fonts/Poppins-Medium.ttf);
 }
 
 body {
    font-family: 'Poppins', 'Arial', sans-serif;
    font-size: 16px;
-   background-image: url(/assets/img/bg-body.png);
+   background-image: url(../assets/img/bg-body.png);
    background-repeat: repeat;
    color: #3D3D3D;
 }
