--- a/styles/style.css
+++ b/styles/style.css
@@ -2,13 +2,13 @@
   font-family: 'Poppins';
   font-weight: normal;
   font-style: normal;
-  src: url(/assets/fonts/Poppins-Medium.ttf);
+  src: url(../assets/fonts/Poppins-Medium.ttf);
 }
 
 body {
   font-family: 'Poppins', 'Arial', sans-serif;
   font-size: 16px;
-  background-image: url(/assets/img/bg-body.png);
+  background-image: url(../assets/img/bg-body.png);
   background-repeat: repeat;
   color: #3D3D3D;
 }
@@ -152,19 +152,19 @@ h2 {
 }
 
 .header__link_git {
-  background-image: url(/assets/svg/github.svg);
+  background-image: url(../assets/svg/github.svg);
 }
 
 .header__link_codewars {
-  background-image: url(/assets/svg/codewars.svg);
+  background-image: url(../assets/svg/codewars.svg);
 }
 
 .header__link_telegram {
-  background-image: url(/assets/svg/telegram.svg);
+  background-image: url(../assets/svg/telegram.svg);
 }
 
 .header__link_mail {
-  background-image: url(/assets/svg/email.svg);
+  background-image: url(../assets/svg/email.svg);
 }
 
 .main__wrap {
