--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,6 @@ body {
   max-width: 1024px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 40px;
 }
 
 h2 {
@@ -186,6 +185,8 @@ h2 {
 
 .main__portfolio {
   text-align: center;
+  width: 50%;
+  margin: 20px auto;
 }
 
 @media (max-width: 900px) {
